Fixed the nav button on mobile as well as the image carousel.

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -123,11 +123,11 @@ p, h4 {
     padding: 3em 3em 40px 3em;
     transition: all .5s ease;
 	@include media-breakpoint-up(lg){
-		width: 20%;
+        width: 20%;
 	}
 	@include media-breakpoint-down(md){
 		width: 270px;
-		transform: translateX(-270px);
+        transform: translateX(-270px);
 	}
     h1 {
         font-size: 2.2em;
@@ -141,19 +141,71 @@ p, h4 {
     }
 }
 
-#navigation-links ul {
+/* Navigation Menu and Mobile Navigation */
+#navigation-links {
+    ul {
     padding: 10px;
-    li {
-        margin: 25px 10px;
-        a{
-            color: $light;
-            font-size: 1.5em;
-            text-decoration: none;
+        li {
+            margin: 25px 10px;
+            a{
+                color: $light;
+                font-size: 1.5em;
+                text-decoration: none;
+            }
         }
     }
 }
 
+.mobile-active {
+    background-color: $teal;
+    border-radius: 50%;
+    position: fixed;
+    left: 20px;
+    top: 20px;
+    z-index: 9999;
+    cursor: pointer;
+    opacity: 1;
+    visibility: hidden;
+    transition: all .5s ease-in;
+    @include media-breakpoint-down(md) {
+        opacity: 1;
+        visibility: visible;
+    }
+}
 
+.mobile-nav {
+    visibility: hidden;
+    top: 100px;
+    left: 20px;
+    z-index: 9999;
+    position: fixed;
+    background:$teal;
+    padding: 15px;
+    border-radius: 20px;
+    border: 1px solid rgb(255, 255, 255);
+    ul {
+        padding: 0px;
+        margin: 10px 0px;
+        li {
+            padding: 10px;
+            a {
+                color: $light;
+                font-size: 1.5em;
+            }
+        }
+    }
+    @include media-breakpoint-down(md) {
+        visibility: hidden;
+        transform: translateY(0%);
+        opacity: 0;
+        transition: all .2s ease-in;
+        &.open {
+            visibility: visible;
+            transform: translateY(1%);
+            opacity: 1;
+        }
+    }
+}
 
 /* All Header styling goes here */
 
@@ -162,19 +214,23 @@ p, h4 {
 .gallery-page {
     width: 100%;
 	float: right;
-	transition: all .5s ease;
+    transition: all .5s ease;
 	@include media-breakpoint-up(lg){
 		width: 80%;
 	}
 }
 
-.photo-samples {
+.single-image {
     background-repeat: no-repeat;
     background-size: cover;
     height: 280px;
+    width: 100%;
 	display: block;
 	z-index: 0;
     position: relative;
+}
+
+.photo-samples {
 	.overlay{
 		position: absolute;
 		top: 0;
@@ -187,6 +243,12 @@ p, h4 {
         transition: .3s ease;
     }
     .title {
+        position: absolute;
+		top: 40%;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		z-index: -1;
         opacity: 0;
         transition: .3s ease;
         h3 {
@@ -195,13 +257,87 @@ p, h4 {
     }
     &:hover, &:focus {
         .overlay{
-			opacity: .5;
+            opacity: .5;
+            z-index: 1;
 		}
 		.title{
-			opacity: 1;
+            opacity: 1;
+            z-index: 1;
 		}
     }
-    
+}
+
+
+/* Image Gallery Styling */
+  
+#overlay {
+    background: rgba(0,0,0,0.7);
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 999;
+    // Removes blue highlight
+    -webkit-user-select: none;
+    -moz-user-select: none;    
+    -ms-user-select: none; 
+    user-select: none; 
+    img {
+        margin: 0;
+        width: 80%;
+        height: auto;
+        object-fit: contain;
+        padding: 5%;
+        @media screen and (min-width:768px) {
+            width: 60%;
+        }
+        @media screen and (min-width:1200px) {
+            width: 50%;
+        }
+    }
+}
+  
+#nextButton {
+    color: #fff;
+    font-size: 2em;
+    transition: opacity 0.8s;
+    &:hover {
+        opacity: 0.7;
+    }
+    @media screen and (min-width:768px) {
+        font-size: 3em;
+    }
+}
+  
+#prevButton {
+    color: #fff;
+    font-size: 2em;
+    transition: opacity 0.8s;
+    &:hover {
+        opacity: 0.7;
+    }
+    @media screen and (min-width:768px) {
+        font-size: 3em;
+    }
+}
+  
+#exitButton {
+    color: #fff;
+    font-size: 2em;
+    transition: opacity 0.8s;
+    position: absolute;
+    top: 15px;
+    right: 15px;
+    &:hover {
+        opacity: 0.7;
+    }
+    @media screen and (min-width:768px) {
+        font-size: 3em;
+    }
 }
 
 
